fix(plugins/plugin-core-support): text search stripe versus dark mode
Fixes #657

--- a/plugins/plugin-core-support/web/css/text-search.css
+++ b/plugins/plugin-core-support/web/css/text-search.css
@@ -50,6 +50,8 @@ body.search-bar-is-visible .header .application-icon {
     flex: 1;
     border: none;
     font-size: inherit;
+    background: transparent;
+    color: var(--color-text-01);
 }
 #search-input:focus {
     outline:none;
